fixes overflow issue on home page

--- a/src/styles/config/_helpers.scss
+++ b/src/styles/config/_helpers.scss
@@ -8,6 +8,10 @@
 
 .relative { position: relative !important; }
 
+.overflow--hidden {
+  overflow: hidden;
+}
+
 //////////    FLEX    \\\\\\\\\\
 
 .flex { display: flex; }
